[gd_scene load_steps=42 format=2]

[ext_resource path="res://assets/img/Main Menu/background.jpg" type="Texture" id=1]
[ext_resource path="res://assets/img/Level Menu/Forward_BTN.png" type="Texture" id=2]
[ext_resource path="res://assets/img/Level Menu/Window.png" type="Texture" id=3]
[ext_resource path="res://assets/img/Level Menu/Backward_BTN.png" type="Texture" id=4]
[ext_resource path="res://assets/img/Level Menu/Star_01.png" type="Texture" id=5]
[ext_resource path="res://assets/img/Level Menu/Star_03.png" type="Texture" id=6]
[ext_resource path="res://assets/img/Level Menu/Play_BTN.png" type="Texture" id=7]
[ext_resource path="res://assets/img/Level Menu/Close_BTN.png" type="Texture" id=8]
[ext_resource path="res://assets/img/Level Menu/Info_BTN.png" type="Texture" id=9]
[ext_resource path="res://assets/fonts/ethnocentric/ethnocentric rg.otf" type="DynamicFontData" id=10]
[ext_resource path="res://scripts/LevelMenu.gd" type="Script" id=11]
[ext_resource path="res://assets/img/Level Menu/Play_BTN_active.png" type="Texture" id=12]
[ext_resource path="res://Transition.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/img/Level Menu/Info_BTN_active.png" type="Texture" id=14]
[ext_resource path="res://assets/img/Level Menu/Backward_BTN_active.png" type="Texture" id=15]
[ext_resource path="res://assets/img/Level Menu/Forward_BTN_active.png" type="Texture" id=16]
[ext_resource path="res://assets/img/Level Menu/Close_BTN_active.png" type="Texture" id=17]
[ext_resource path="res://assets/img/Level Menu/Star_02.png" type="Texture" id=18]
[ext_resource path="res://assets/img/Level Menu/Info_BTN_disable.png" type="Texture" id=19]
[ext_resource path="res://assets/img/Level Menu/Play_BTN_disable.png" type="Texture" id=20]
[ext_resource path="res://assets/img/Level Menu/Info_window.png" type="Texture" id=21]
[ext_resource path="res://assets/img/Main Menu/Button.png" type="Texture" id=22]

[sub_resource type="Animation" id=7]
resource_name = "Slide Window Backward"
tracks/0/type = "value"
tracks/0/path = NodePath("WindowContainer/PreviousWindow:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 1920, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WindowContainer/NextWindow:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1920, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "Slide Window Forward"
tracks/0/type = "value"
tracks/0/path = NodePath("WindowContainer/PreviousWindow:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1920, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WindowContainer/NextWindow:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( -1920, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float scroll_speed = 0;

void fragment(){
    vec2 shifteduv = UV;
    shifteduv.x += TIME * scroll_speed;
    vec4 color = textureLod(TEXTURE, shifteduv, 0.0);
    COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/scroll_speed = 0.01

[sub_resource type="DynamicFont" id=10]
size = 48
use_filter = true
font_data = ExtResource( 10 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "empty",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "gold",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "silver",
"speed": 5.0
} ]

[sub_resource type="InputEventAction" id=16]
action = "right"

[sub_resource type="ShortCut" id=17]
shortcut = SubResource( 16 )

[sub_resource type="InputEventAction" id=18]
action = "left"

[sub_resource type="ShortCut" id=19]
shortcut = SubResource( 18 )

[sub_resource type="InputEventAction" id=21]
action = "enter"

[sub_resource type="ShortCut" id=8]
shortcut = SubResource( 21 )

[sub_resource type="InputEventAction" id=15]
action = "esc"

[sub_resource type="ShortCut" id=20]
shortcut = SubResource( 15 )

[sub_resource type="DynamicFont" id=22]
size = 32
use_filter = true
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxTexture" id=23]
texture = ExtResource( 21 )
region_rect = Rect2( 0, 0, 385, 501 )

[sub_resource type="DynamicFont" id=24]
size = 32
use_filter = true
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=27]
size = 12
use_filter = true
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=26]
size = 64
use_filter = true
font_data = ExtResource( 10 )

[node name="LevelMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 11 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Slide Window Backward" = SubResource( 7 )
"anims/Slide Window Forward" = SubResource( 9 )

[node name="Background" type="Sprite" parent="."]
material = SubResource( 2 )
scale = Vector2( 0.426667, 0.24 )
texture = ExtResource( 1 )
centered = false

[node name="WindowContainer" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="PreviousWindow" type="Control" parent="WindowContainer"]
margin_right = 1919.96
margin_bottom = 1080.0

[node name="PreviousWindow" type="Sprite" parent="WindowContainer/PreviousWindow"]
position = Vector2( 960, 540 )
scale = Vector2( 1, 0.8 )
texture = ExtResource( 3 )

[node name="PreviousLevelName" type="Label" parent="WindowContainer/PreviousWindow"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -447.98
margin_top = 128.0
margin_right = 448.02
margin_bottom = 206.0
custom_colors/font_color = Color( 0.929412, 0.960784, 0.972549, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.392157 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 10 )
text = "LEVEL1_TITLE"
align = 1
valign = 1
clip_text = true

[node name="PStar1" type="AnimatedSprite" parent="WindowContainer/PreviousWindow"]
position = Vector2( 728, 496 )
scale = Vector2( 0.8, 0.8 )
frames = SubResource( 3 )
animation = "empty"

[node name="PStar2" type="AnimatedSprite" parent="WindowContainer/PreviousWindow"]
position = Vector2( 960, 376 )
scale = Vector2( 0.8, 0.8 )
frames = SubResource( 3 )
animation = "empty"

[node name="PStar3" type="AnimatedSprite" parent="WindowContainer/PreviousWindow"]
position = Vector2( 1192, 496 )
scale = Vector2( 0.8, 0.8 )
frames = SubResource( 3 )
animation = "empty"

[node name="PInfoSprite" type="Sprite" parent="WindowContainer/PreviousWindow"]
visible = false
position = Vector2( 640, 712 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 9 )
centered = false

[node name="PPlaySprite" type="Sprite" parent="WindowContainer/PreviousWindow"]
visible = false
position = Vector2( 872, 712 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 7 )
centered = false

[node name="PCloseSprite" type="Sprite" parent="WindowContainer/PreviousWindow"]
visible = false
position = Vector2( 1104, 712 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 8 )
centered = false

[node name="NextWindow" type="Control" parent="WindowContainer"]
margin_left = -1920.0
margin_bottom = 1080.0

[node name="NextWindow" type="Sprite" parent="WindowContainer/NextWindow"]
position = Vector2( 966, 540 )
scale = Vector2( 1, 0.8 )
texture = ExtResource( 3 )

[node name="NextLevelName" type="Label" parent="WindowContainer/NextWindow"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -448.0
margin_top = 128.0
margin_right = 456.0
margin_bottom = 206.0
custom_colors/font_color = Color( 0.929412, 0.960784, 0.972549, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.392157 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 10 )
text = "LEVEL1_TITLE"
align = 1
valign = 1

[node name="NStar1" type="AnimatedSprite" parent="WindowContainer/NextWindow"]
position = Vector2( 730.8, 496 )
scale = Vector2( 0.8, 0.8 )
frames = SubResource( 3 )
animation = "empty"

[node name="NStar2" type="AnimatedSprite" parent="WindowContainer/NextWindow"]
position = Vector2( 962.8, 376 )
scale = Vector2( 0.8, 0.8 )
frames = SubResource( 3 )
animation = "empty"

[node name="NStar3" type="AnimatedSprite" parent="WindowContainer/NextWindow"]
position = Vector2( 1194.8, 496 )
scale = Vector2( 0.8, 0.8 )
frames = SubResource( 3 )
animation = "empty"

[node name="NInfoSprite" type="Sprite" parent="WindowContainer/NextWindow"]
visible = false
position = Vector2( 641, 712 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 9 )
centered = false

[node name="NPlaySprite" type="Sprite" parent="WindowContainer/NextWindow"]
visible = false
position = Vector2( 872, 712 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 7 )
centered = false

[node name="NCloseSprite" type="Sprite" parent="WindowContainer/NextWindow"]
visible = false
position = Vector2( 1104, 712 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 8 )
centered = false

[node name="ForwardButton" type="TextureButton" parent="WindowContainer"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 1432.0
margin_top = 412.0
margin_right = 1654.0
margin_bottom = 628.0
rect_scale = Vector2( 0.8, 0.8 )
focus_mode = 0
shortcut_in_tooltip = false
shortcut = SubResource( 17 )
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 16 )

[node name="BackwardButton" type="TextureButton" parent="WindowContainer"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 272.0
margin_top = 412.0
margin_right = 494.0
margin_bottom = 628.0
rect_scale = Vector2( 0.8, 0.8 )
focus_mode = 0
shortcut_in_tooltip = false
shortcut = SubResource( 19 )
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 15 )

[node name="InfoButton" type="TextureButton" parent="WindowContainer"]
margin_left = 640.0
margin_top = 712.0
margin_right = 862.0
margin_bottom = 928.0
rect_scale = Vector2( 0.8, 0.8 )
focus_mode = 0
shortcut_in_tooltip = false
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 14 )
texture_disabled = ExtResource( 19 )

[node name="PlayButton" type="TextureButton" parent="WindowContainer"]
margin_left = 872.0
margin_top = 712.0
margin_right = 1094.0
margin_bottom = 928.0
rect_scale = Vector2( 0.8, 0.8 )
focus_mode = 0
shortcut_in_tooltip = false
shortcut = SubResource( 8 )
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 12 )
texture_disabled = ExtResource( 20 )

[node name="CloseButton" type="TextureButton" parent="WindowContainer"]
margin_left = 1104.0
margin_top = 712.0
margin_right = 1326.0
margin_bottom = 928.0
rect_scale = Vector2( 0.8, 0.8 )
focus_mode = 0
shortcut_in_tooltip = false
shortcut = SubResource( 20 )
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 17 )

[node name="HSlider" type="HSlider" parent="WindowContainer"]
visible = false
margin_right = 16.0
margin_bottom = 16.0
min_value = 1.0
max_value = 4.0
value = 1.0
rounded = true
scrollable = false

[node name="Transition" parent="." instance=ExtResource( 13 )]

[node name="WindowDialog" type="WindowDialog" parent="."]
use_parent_material = true
margin_left = 496.0
margin_top = 224.0
margin_right = 960.0
margin_bottom = 588.0
rect_scale = Vector2( 2, 2 )
custom_colors/title_color = Color( 1, 1, 1, 1 )
custom_constants/title_height = -75
custom_fonts/title_font = SubResource( 22 )
custom_styles/panel = SubResource( 23 )
__meta__ = {
"_edit_group_": true
}

[node name="Info" type="Label" parent="WindowDialog"]
anchor_right = 1.0
margin_top = 8.0
margin_bottom = 48.0
custom_colors/font_color = Color( 0.929412, 0.960784, 0.972549, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.392157 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 24 )
text = "LEVEL_INFO"
align = 1
valign = 1

[node name="Content" type="Label" parent="WindowDialog"]
margin_left = 40.0
margin_top = 64.0
margin_right = 424.0
margin_bottom = 277.0
custom_colors/font_color = Color( 0.929412, 0.960784, 0.972549, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.392157 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 0
custom_fonts/font = SubResource( 27 )
text = "LEVEL1_CONTENT"
align = 1
valign = 1
autowrap = true

[node name="AcceptButton" type="Button" parent="WindowDialog"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -296.0
margin_top = -132.0
margin_right = 295.0
margin_bottom = 34.0
rect_scale = Vector2( 0.25, 0.25 )
rect_pivot_offset = Vector2( 295, 82.5 )
custom_colors/font_color = Color( 0.929412, 0.960784, 0.972549, 1 )
custom_colors/font_color_hover = Color( 1, 0.815686, 0.305882, 1 )
custom_fonts/font = SubResource( 26 )
text = "Accept"
icon = ExtResource( 22 )
flat = true
icon_align = 1

[connection signal="pressed" from="WindowContainer/ForwardButton" to="." method="_on_ForwardButton_pressed"]
[connection signal="pressed" from="WindowContainer/BackwardButton" to="." method="_on_BackwardButton_pressed"]
[connection signal="pressed" from="WindowContainer/InfoButton" to="." method="_on_InfoButton_pressed"]
[connection signal="pressed" from="WindowContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="WindowContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="popup_hide" from="WindowDialog" to="." method="_on_WindowDialog_hide"]
[connection signal="pressed" from="WindowDialog/AcceptButton" to="." method="_on_AcceptButton_pressed"]
